spade-tests/src/snapshots/spade_tests__typeinference__type_error_on_port_set_to_port.snap
---
source: spade-tests/src/typeinference.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Expected type int<10>, got ~int<10>
  ┌─ testinput:3:13
  │
3 │     set p = v;
  │             ^ Expected int<10> here


